include/mat.hpp

uchar* cv_Mat_get_Data(Mat* self);
void cv_Mat_convertTo(Mat* self,Mat* m, int rtype, double alpha, double beta);
MatExpr* cv_Mat_div(Mat* m1, Mat* m2);
Mat* cv_create_Mat_typed(int rows, int cols, int type);
Mat* cv_create_Mat_with_data(int rows, int cols, int type, void* data );
Mat* cv_create_Mat();
Mat* cv_Mat_assignVal(Mat* self, Scalar* s);
Mat* cv_Mat_getColRange(Mat* self, int startrow, int endrow);
Mat* cv_Mat_diag_d(Mat* self, int d);
Mat* cv_Mat_clone(Mat* self);
void cv_Mat_copyTo(Mat* self, Mat* m);
void cv_Mat_copyTo_masked(Mat* self, Mat* m, Mat* mask);
int cv_Mat_type(Mat* self);
int cv_Mat_depth(Mat* self);
bool cv_Mat_isContinuous(Mat* self);
int cv_Mat_channels(Mat* self);
int cv_Mat_cols(Mat* self);
int cv_Mat_empty(Mat* self);
Size* cv_Mat_size(Mat* self);
uchar* cv_Mat_ptr_index(Mat* self, int i);
Mat* cv_create_ones(int rows, int cols, int type);
MatExpr* cv_Mat_transpose_mat(Mat* self);
MatExpr* cv_Mat_add(Mat* m1, Mat* m2);
Mat* force(MatExpr* expr);
MatExpr* promote(Mat* m);
MatExpr* cv_Mat_scale(MatExpr* m, double alpha);
Mat* cv_Mat_cross(Mat* self, Mat* m);
void cv_Mat_locateROI(Mat* self, Size* s, Point* p);
Mat* cv_Mat_adjustROI(Mat* self, int dtop, int dbottom, int dleft, int dright);