include/opencv_generated.hpp

using namespace cv;
DMatch* cv_create_DMatch();
DMatch* cv_create_DMatch3(int _queryIdx, int _trainIdx, float _distance);
DMatch* cv_create_DMatch4(int _queryIdx, int _trainIdx, int _imgIdx, float _distance);
KeyPoint* cv_create_KeyPoint();
KeyPoint* cv_create_KeyPoint7(float x, float y, float _size, float _angle, float _response, int _octave, int _class_id);