include/extra_functions.hpp

float cv_Size2f_area(Size2f* self);
float cv_Size2f_height(Size2f* self);