core.lisp

;;;; -*- mode: lisp; indent-tabs: nil -*-
;;;; core.lisp
;;;; OpenCV bindings
;;;; The Core Functionality


(in-package :lisp-cv)


;; Default parameters

(defvar *camera-index* 0)
(defvar *default-width* 640)
(defvar *default-height* 480)
(defvar *frames-per-second* 30)
(defvar *millis-per-frame* (round (/ 1000 *frames-per-second*)))


;; Change default parameters

(defun def-params (width height &optional camera-index fps)
  (setf *default-width* width)
  (setf *default-height* height)
  (if camera-index (setf *camera-index* camera-index))
  (if fps (setf *frames-per-second* fps))
  (format t "*default-width* = ~a~%" width)
  (format t "*default-height* = ~a~%" height)
  (if camera-index (format t "*camera-index* = ~a~%" camera-index)
    (format t "*camera-index* = ~a~%" *camera-index*))
  (if fps (format t "*frames-per-second* = ~a~%" fps)
    (format t "*frames-per-second* = ~a~%" *frames-per-second*)))



;; Live code editing

(defmacro continuable (&body body)
  `(restart-case
    (progn ,@body)
    (continue () :report "Continue"  )))

(defun update-swank ()
  "Grabs SWANK connections and tells it to handle requests. 
   Call this every loop in the main loop of your program"
  (continuable
   (let ((connection (or swank::*emacs-connection*
			 (swank::default-connection))))
     (when connection
       (swank::handle-requests connection t)))))



;; Interop - String*


;; string* std_cstringToString(char* s, size_t len) 
(defcfun ("cstring_to_std_string" c-string-to-string) *string
  "Converts C string to C++"
  (s :string)
  (len :unsigned-int))


;;; Basic Structures


;; MatExpr* promote(Mat* m) 
(defcfun ("promote" <<) mat-expr
  "Converts a MAT to a MAT-EXPR.
   This is a shorthand version of the PROMOTE function." 
  (mat mat))


;; Mat* force(MatExpr* expr)
(defcfun ("force" >>) mat
  "Coerces a MAT-EXPR to a MAT. 
   This is a shorthand version of the FORCE function."
  (mat-expr mat-expr))


;; MatExpr + operator
;; MatExpr* cv_Mat_add(Mat* m1, Mat* m2)
(defcfun ("cv_Mat_add" add) mat-expr
  (m1 mat)
  (m2 mat))


;; Mat& Mat::adjustROI(int dtop, int dbottom, int dleft, int dright)
;; Mat* cv_Mat_adjustROI(Mat* self, int dtop, int dbottom, int dleft, int dright) 
(defcfun ("cv_Mat_adjustROI" adjust-roi) mat
	 "Adjusts a submatrix size and position within the parent matrix."
	 (self mat)
	 (dtop :int)
	 (dbottom :int)
	 (dleft :int)
	 (dright :int))


;; _Tp area() const
;; int cv_Size_area(Size* self)
(defcfun ("cv_Size_area" area) :int
  "Gets the area of a SIZE construct"
  (self size))


;; _Tp area() const
;; float cv_Size2f_area(Size2f* self) 
(defcfun ("cv_Size2f_area" area2f) :float
  "Gets the area of a SIZE2F construct"
  (self size2f))


 ;; Mat* cv_Mat_assignVal(Mat* self, Scalar* s)
(defcfun ("cv_Mat_assignVal" assgn-val) mat
  "Assign a scalar value to a matrix."
  (self mat)
  (s scalar))

;; uchar* ptr(int i0=0)
;; uchar* cv_Mat_ptr_index(Mat* self, int i)
(defmacro at (&optional self i j type)
	       `(mem-aref (%ptr ,self ,i) ,type ,j))


;; Point_<_Tp> br() const
;; Point* cv_Rect_br(Rect* self) 
(defcfun ("cv_Rect_br" rect-br) point 
  "Retrievies the bottom-right corner of a rectangle."
  (self rect))


;; int cv_Mat_channels(Mat* self)
(defcfun ("cv_Mat_channels" channels) :int
  (self mat))


;; Mat Mat::clone() const
;; Mat* cv_Mat_clone(Mat* self) 
(defcfun ("cv_Mat_clone" clone) mat
  "Creates a full copy of the array and the underlying data."
  (self mat))


;; Mat Mat::colRange(int startcol, int endcol) const
;; Mat* cv_Mat_getColRange(Mat* self, int startcol, int endrow)
(defcfun ("cv_Mat_getColRange" col-range) mat
  "Creates a matrix header for the specified column span."
  (self mat)
  (startcol :int)
  (endcol :int))

;; int rows, cols;
;; int cv_Mat_cols(Mat* self)
(defcfun ("cv_Mat_cols" cols) :int
  (self mat))


;; void Mat::convertTo(OutputArray m, int rtype, double alpha=1, double beta=0 ) const
;; void cv_Mat_convertTo(Mat* self,Mat* m, int rtype, double alpha, double beta)
(defcfun ("cv_Mat_convertTo" %convert-to) :int
  (self mat)
  (m mat)
  (rtype :int)
  (alpha :double)
  (beta :double))

(defun convert-to (self m rtype &optional (alpha 1.0d0) (beta 0.0d0))
  "Converts an array to another data type with optional scaling."
  (%convert-to self m rtype alpha beta))


;; void Mat::copyTo(OutputArray m) const
;; void cv_Mat_copyTo(Mat* self, Mat* m)
(defcfun ("cv_Mat_copyTo" copy-to2) :void
  (self mat)
  (m mat))


;; void Mat::copyTo(OutputArray m, InputArray mask) const
;; void cv_Mat_copyTo_masked(Mat* self, Mat* m, Mat* mask)
(defcfun ("cv_Mat_copyTo_masked" copy-to3) :void
  (self mat)
  (m mat)
  (mask mat))


(defun copy-to (&optional mat m mask)
  (cond ((eq mask nil)
	 (copy-to2 mat m))
	(t (copy-to3 mat m mask))))


;; Mat Mat::cross(InputArray m) const
;; Mat* cv_Mat_cross(Mat* self, Mat* m)
(defcfun ("cv_Mat_cross" cross) mat
  "Computes a cross-product of two 3-element vectors."
  (self mat)
  (m mat))


;; uchar* data
;; uchar* cv_Mat_get_Data(Mat* self)
(defcfun ("cv_Mat_get_Data" data) :pointer
  "Pointer to the data."
  (self mat))


;; int Mat::depth() const
;; int cv_Mat_depth(Mat* self)
(defcfun ("cv_Mat_depth" depth) :int 
	 (self mat))


;; Mat Mat::diag(int d=0 ) const
;; Mat* cv_Mat_diag_d(Mat* self, int d)
(defcfun ("cv_Mat_diag_d" %diag) mat
  "Extracts a diagonal from a matrix."
  (self mat)
  (d :int))

(defun diag (self &optional (d 0))
  "Extracts a diagonal from a matrix."
  (%diag self d))


;; MatExpr / operator
;; MatExpr* cv_Mat_div(Mat* m1, Mat* m2)
(defcfun ("cv_Mat_div" div) mat-expr
  (m1 mat)
  (m2 mat))


;; DMatch::DMatch()
;; DMatch* cv_create_DMatch() 
(defcfun ("cv_create_DMatch" dmatch0) dmatch
	 "DMatch constructor")

;; DMatch( int _queryIdx, int _trainIdx, float _distance ) 
;; DMatch* cv_create_DMatch3(int _queryIdx, int _trainIdx, float _distance)
(defcfun ("cv_create_DMatch3" dmatch3) dmatch
	 "DMatch constructor"
	 (query-idx :int)
	 (train-idx :int)
	 (distance :float))

;; DMatch( int _queryIdx, int _trainIdx, int _imgIdx, float _distance )
;; DMatch* cv_create_DMatch4(int _queryIdx, int _trainIdx, int _imgIdx, float _distance)
(defcfun ("cv_create_DMatch4" dmatch4) dmatch
	 "DMatch constructor"
	 (query-idx :int)
	 (train-idx :int)
	 (img-idx :int)
	 (distance :float))

(defun dmatch (&rest args)
       (cond ((eq (first args) nil)
	      (dmatch0))
	      ((and (first args) (not (fourth args)))
	       (dmatch3 (first args) (second args) (third args)))
	      ((fourth args)
	       (dmatch4 (first args) (second args) (third args) (fourth args)))
	       (t nil)))


;; _Tp dot(const Point_& pt) const
;; int cv_Point_dot(Point* self, Point* other) 
(defcfun ("cv_Point2i_dot" dot) :int 
  "Finds the dot product of a point."
  (self point)
  (other point))


;; _Tp dot(const Point_& pt) const
;; double cv_Point2d_dot(Point2d* self, Point2d* other) 
(defcfun ("cv_Point2d_dot" dot2d) :double
  "Finds the dot product of a point2d."
  (self point2d)
  (other point2d))


;; _Tp dot(const Point_& pt) const
;; float cv_Point2f_dot(Point2f* self, Point2f* other)
(defcfun ("cv_Point2f_dot" dot2f) :float
  "Finds the dot product of a point2f."
  (self point2f)
  (other point2f))


;; _Tp dot(const Point3_& pt) const
;; double cv_Point3d_dot(Point3d* self, Point3d* other)
(defcfun ("cv_Point3d_dot" dot3d) :double 
  "Finds the dot product of a point3d."
  (self point3d)
  (other point3d))


;; bool Mat::isContinuous() const
;; bool cv_Mat_isContinuous(Mat* self) 
(defcfun ("cv_Mat_isContinuous" is-continuous) :boolean
  (self mat))


;; _Tp dot(const Point3_& pt) const
;; float cv_Point3f_dot(Point3f* self, Point3f* other)
(defcfun ("cv_Point3f_dot" dot3f) :float 
  "Finds the dot product of a point3f."
  (self point3f)
  (other point3f))


;; _Tp dot(const Point3_& pt) const
;; int cv_Point3i_dot(Point3i* self, Point3i* other)
(defcfun ("cv_Point3i_dot" dot3i) :int 
  "Finds the dot product of a point3i."
  (self point3i)
  (other point3i))


;; bool Mat::empty() const
;; int cv_Mat_empty(Mat* self) 
(defcfun ("cv_Mat_empty" empty) :boolean
  "Returns true if the array has no elements."
  (self mat))


;; Mat* force(MatExpr* expr)
(defcfun ("force" force) mat
  "Coerces a MAT-EXPR to a MAT."
  (mat-expr mat-expr))


;; _Tp width, height
;; double cv_Size_height(Size* self) 
(defcfun ("cv_Size_height" height) :double
  "Gets the height of a SIZE construct"
  (self size))


;; _Tp width, height
;; float cv_Size2f_height(Size* self) 
(defcfun ("cv_Size2f_height" height2f) :float
  "Gets the height of a SIZE2F"
  (self size2f))


;; KeyPoint::KeyPoint()
;; KeyPoint* cv_create_KeyPoint()
(defcfun ("cv_create_KeyPoint" key-point0) key-point
  "KEY-POINT constructor")

;; KeyPoint::KeyPoint(float x, float y, float _size, float _angle=-1, float _response=0, int _octave=0, int _class_id=-1)
;; KeyPoint* cv_create_KeyPoint7(float x, float y, float _size, float _angle, float _response, int _octave, int _class_id)
(defcfun ("cv_create_KeyPoint7" key-point7) key-point
  "KEY-POINT constructor"
  (x :float)
  (y :float)
  (size :float)
  (angle :float)
  (response :float)
  (octave :int)
  (class-id :int))

(defun key-point (&optional x y size (angle -1) (response 0) (octave 0) (class-id -1))
	   (cond ((eq x nil)
		  (key-point0))
		 (x
		  (key-point7 x y size angle response octave class-id))
		 (t nil)))


;; Mat::Mat()
;; Mat* cv_create_Mat()
(defcfun ("cv_create_Mat" %mat) mat
  "MAT constructor")

;; Mat::Mat()
;; Mat* cv_create_Mat()
(defcfun ("cv_create_Mat" %%mat) (mat :garbage-collect t)
  "MAT constructor")

(defun mat (&rest args)
  (cond ((eq (first args) nil) (%mat))
	((eq :t (car args)) (%%mat))
	(t nil)))


;; Mat::Mat(int rows, int cols, int type, void* data) 
;; Mat* cv_create_Mat_with_data(int rows, int cols, int type, void* data)
(defcfun ("cv_create_Mat_with_data" mat-data) mat
  (rows :int)
  (cols :int)
  (type :int)
  (data :pointer))


;; Mat::t
;; MatExpr* cv_Mat_transpose_mat(Mat* self) 
(defcfun ("cv_Mat_transpose_mat" mat-expr-t)  mat-expr
  "Transposes a matrix."
  (self mat))


;; static MatExpr Mat::eye(int rows, int cols, int type) 
;; Mat* cv_create_identity(int rows, int cols, int type)
(defcfun ("cv_create_identity" mat-eye) mat
  "Returns an identity matrix of the specified size and type."
  (rows :int)
  (cols :int)
  (type :int))


;; void Mat::locateROI(Size& wholeSize, Point& ofs) const
;; void cv_Mat_locateROI(Mat* self, Size* s, Point* p) 
(defcfun ("cv_Mat_locateROI" locate-roi) :void 
	 "Locates the matrix header within a parent matrix."
	 (self mat)
	 (whole-size size)
	 (ofs point))


;; static MatExpr Mat::ones(int rows, int cols, int type)
;; Mat* cv_create_ones(int rows, int cols, int type)
(defcfun ("cv_create_ones" mat-ones) mat
  (rows :int)
  (cols :int)
  (type :int))


;; Size Mat::size() const
;; Size* cv_Mat_size(Mat* self)
(defcfun ("cv_Mat_size" mat-size) size
  (self mat))


;; MatExpr * operator
;; MatExpr* cv_Mat_scale(MatExpr* m, double alpha)
(defcfun ("cv_Mat_scale" scale) mat-expr
  (m mat-expr)
  (alpha :double))


;; int Mat::type() const 
;; int cv_Mat_type(Mat* self) 
(defcfun ("cv_Mat_type" mat-type) :int
  (self mat))


;; Mat::Mat(int rows, int cols, int type)
;; Mat* cv_create_Mat_typed(int rows, int cols, int type)
(defcfun ("cv_create_Mat_typed" mat-typed)  mat
  "MAT constructor with a row, column and type parameter."
  (rows :int)
  (cols :int)
  (type :int))

